--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
-<h1>You Are Just One Step Away From Getting Your Robux!</h1>
-<h3>Click <a href="https://zrobux.github.io/step3">Here</a> To Generate Your Code Below instantly! </h3>
-<h1>ROBUX CODE: </h1>
+<h1> Please Follow The Intructions.</h1>
+<br>
+<h1> Click The "Generate" Link Below To Get Your Code.<h1>
+<h1>ROBUX CODE: <a href="https://zrobux.github.io/step3">Generate</a> </h1>
